timer + replay button + mobile style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>memory</title>
 </head>
 <body>
+    <h1>memory</h1>
+    <section class="games-infos">
+        <p class="attempts">Attempts : <span></span></p>
+        <p class="timer"></p>
+    </section>
     <section class="memory-container">
+        
     </section>
 </body>
 
