credits and readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section class="memory-container">
         
     </section>
+    <p class="credits">Illustration by <a href="https://icons8.com/illustrations/author/206397" target="_blank">Pablo Marquez Ouch!</a></p>
 </body>
 
 <script src="script.js"></script>
